src/test/resources/invalid_tests/UnknownVariableName.cnna
architecture UnknownVariableName(inputs=10){
    def input Q(-oo:+oo)^{inputs} in
    def output Q(0:1)^{2} out

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}